--- a/pages/products.html
+++ b/pages/products.html
@@ -687,28 +687,261 @@
       <div class="section-title">
         <h3>Recommended for you</h3>
       </div>
+
+
+
       <!-- slider of products -->
-      <div class="images-cards-container">
-        <div class="image-card ">
-          <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
-          <div class="button-holder"><button>Water & energy</button></div>
+      <div class="carousel">
+        <button class="dark-btn left-chevron">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <div class="carousel-body p-0 pb-2 mb-5">
+          <div class="row flex-nowrap">
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/idanaes-open-wardrobe-white__0898869_pe782672_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">IDANÄS</p>
+              <p class="product-description">Open wardrobe</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 4,495</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 2,995 </strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/finbraeken-duvet-cover-and-pillowcase-floral-patterned__0932932_pe791687_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">FINBRÄKEN</p>
+              <p class="product-description">Duvet cover and pillowcase</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 999</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 299 </strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/milsbo-glass-door-cabinet-white__0914355_pe783961_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">MILSBO</p>
+              <p class="product-description">Glass-door cabinet</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 4,995</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 3,495 </strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/pruta-food-container-transparent-blue__0916190_pe785021_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">PRUTA</p>
+              <p class="product-description">Food container</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 19/3 pack</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 12 <sub>/3 pack</sub> </strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/risatorp-trolley-white__0736868_pe740789_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">RISATORP</p>
+              <p class="product-description">Trolley</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 1,995</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 1,495</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/fatalig-vase-cat-off-white__0990315_pe818847_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">FÅTALIG</p>
+              <p class="product-description">Vase</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 149</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 99</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/vedbo-armchair-gunnared-dark-grey__0512767_pe638683_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">VEDBO</p>
+              <p class="product-description">Armchair</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 4,995</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 3,495</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/levla-wall-organiser-dark-brown__1012716_pe828987_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">LEVLA</p>
+              <p class="product-description">Wall organiser</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 229</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 129</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/tustna-mattress-pad-white__0636884_pe698073_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">TUSTNA</p>
+              <p class="product-description">Mattress pad</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 4,495</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 1,995</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/ebbemala-table-lamp-brass-colour__0718163_pe731455_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">EBBEMÅLA</p>
+              <p class="product-description">Table lamp</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 1,199</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 899</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/smastad-pull-out-storage-unit-white__0913321_pe783458_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">SMÅSTAD</p>
+              <p class="product-description">Pull-out storage unit</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 4,000</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 2,500</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+            <div class="col-6 col-lg-3">
+              <img
+                class="w-100"
+                src="https://www.ikea.com/eg/en/images/products/voerda-filleting-knife-black__0710390_pe727518_s5.jpg?f=xl"
+                alt=""
+              />
+              <p class="product-highlight">Limited time offer</p>
+              <p class="product-header">VÖRDA</p>
+              <p class="product-description">Filleting knife</p>
+              <div class="price">
+                <div class="line-through"><sup>EGP 229</sup></div>
+                <div class="original-price">
+                  <sup>EGP</sup>
+                  <span>
+                    <strong> 129</strong>
+                  </span>
+                </div>
+              </div>
+              <p class="more-options">More options</p>
+            </div>
+          </div>
         </div>
-        <div class="image-card ">
-          <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
-          <div class="button-holder"><button>Materials</button></div>
-        </div>
-        <div class="image-card">
-          <img src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"/>
-          <div class="button-holder"><button>Health</button></div>
-        </div>
-        <div class="image-card ">
-          <img src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"/>
-          <div class="button-holder"><button>Food</button></div>        
-        </div>
-        <div class="image-card">
-          <img src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"/>
-          <div class="button-holder"><button>Furniture</button></div>        
-        </div>
+        <button class="dark-btn right-chevron">
+          <i class="fas fa-chevron-right"></i>
+        </button>
       </div>
 
       <div class="section-title">
@@ -877,5 +1110,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="../assets/js/main.js"></script>
   </body>
 </html>
