--- a/pages/guide.html
+++ b/pages/guide.html
@@ -192,22 +192,22 @@
     <div class="body-container">
         <div class="header-messages"></div>
         <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
-            <a href="#" class="navbar-brand">
+            <a href="../index.html" class="navbar-brand">
                 <img class="logo" src="../assets/images/ikea-logo.svg" alt="logo" /></a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Products</a>
+                        <a class="nav-link active" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Rooms</a>
+                        <a class="nav-link"data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Rooms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Offers</a>
+                        <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Offers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">What's new</a>
+                        <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">What's new</a>
                     </li>
                 </ul>
             </div>
