add reference between pages

--- a/Log-in.html
+++ b/Log-in.html
@@ -43,7 +43,7 @@
               <label for="floatingPassword">Password</label>
               <a href="#">Forget your Password?</a>
             </div>
-            <button class="login-creation">Login</button>
+            <button class="login-creation"><a href="./index.html">Login</a></button>
           </section>
         </section>
       </div>
