--- a/pages/category.html
+++ b/pages/category.html
@@ -249,9 +249,9 @@
               <strong>Select store</strong>
             </div>
           </div>
-          <i class="bi bi-person"></i>
-          <i class="bi bi-heart"></i>
-          <i class="bi bi-minecart-loaded"></i>
+          <a href="../Log-in.html"><i class="bi bi-person"></i></a>
+          <a href="../favourite.html"><i class="bi bi-heart"></i></a>
+          <a href="../shoppingBag.html"><i class="bi bi-minecart-loaded"></i></a>
         </div>
 
         <!-- Toggler -->
@@ -284,7 +284,7 @@
       <div>
         <h4 class="head-title">Furniture</h4>
         <div class="row mx-auto g-3 categories-slidder">
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/gaming-furniture-55002.jpeg?imwidth=300"
               class="card-img-top"
@@ -294,7 +294,7 @@
               <p class="card-text">Gaming furniture</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/furniture-sets-55036.jpeg?imwidth=300"
               class="card-img-top"
@@ -304,7 +304,7 @@
               <p class="card-text">Furniture sets</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/beds-bm003.jpeg?imwidth=300"
               class="card-img-top"
@@ -314,7 +314,7 @@
               <p class="card-text">Beds</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/sofas-fu003.jpeg?imwidth=300"
               class="card-img-top"
@@ -324,7 +324,7 @@
               <p class="card-text">Sofas & armchairs</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/bookcases-shelving-units-st002.jpeg?imwidth=300"
               class="card-img-top"
@@ -334,7 +334,7 @@
               <p class="card-text">Bookcases & shelving units</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/tables-desks-fu004.jpeg?imwidth=300"
               class="card-img-top"
@@ -344,7 +344,7 @@
               <p class="card-text">Tables & desks</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/cabinets-cupboards-st003.jpeg?imwidth=300"
               class="card-img-top"
@@ -354,7 +354,7 @@
               <p class="card-text">Cabinets & cupboards</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/tv-media-furniture-10475.jpeg?imwidth=300"
               class="card-img-top"
@@ -364,7 +364,7 @@
               <p class="card-text">TV & media furniture</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/chests-of-drawers-drawer-units-st004.jpeg?imwidth=300"
               class="card-img-top"
@@ -374,7 +374,7 @@
               <p class="card-text">Chests of drawers & drawer units</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/wardrobes-19053.jpeg?imwidth=300"
               class="card-img-top"
@@ -384,7 +384,7 @@
               <p class="card-text">Wardrobes</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/chairs-fu002.jpeg?imwidth=300"
               class="card-img-top"
@@ -394,7 +394,7 @@
               <p class="card-text">Chairs</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/outdoor-furniture-od003.jpeg?imwidth=300"
               class="card-img-top"
@@ -404,7 +404,7 @@
               <p class="card-text">Outdoor furniture</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/sideboards-buffets-console-tables-30454.jpeg?imwidth=300"
               class="card-img-top"
@@ -414,7 +414,7 @@
               <p class="card-text">Sideboards, buffets & console tables</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/childrens-furniture-18767.jpeg?imwidth=300"
               class="card-img-top"
@@ -424,7 +424,7 @@
               <p class="card-text">Children's furniture</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/room-dividers-46080.jpeg?imwidth=300"
               class="card-img-top"
@@ -434,7 +434,7 @@
               <p class="card-text">Room dividers</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/trolleys-fu005.jpeg?imwidth=300"
               class="card-img-top"
@@ -444,7 +444,7 @@
               <p class="card-text">Trolleys</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/bar-furniture-16244.jpeg?imwidth=300"
               class="card-img-top"
@@ -454,7 +454,7 @@
               <p class="card-text">Bar furniture</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/armchairs-chaise-longues-fu006.jpeg?imwidth=300"
               class="card-img-top"
@@ -464,7 +464,7 @@
               <p class="card-text">Armchairs & chaise longues</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/cafe-furniture-19141.jpeg?imwidth=300"
               class="card-img-top"
@@ -474,7 +474,7 @@
               <p class="card-text">Café furniture</p>
             </div>
           </a>
-          <a class="card category-card col-4 col-lg-2" href="#">
+          <a class="card category-card col-4 col-lg-2" href="./products.html">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/nursery-furniture-45780.jpeg?imwidth=300"
               class="card-img-top"
