--- a/pages/guide.html
+++ b/pages/guide.html
@@ -226,9 +226,9 @@
                         <strong>Select store</strong>
                     </div>
                 </div>
-                <i class="bi bi-person"></i>
-                <i class="bi bi-heart"></i>
-                <i class="bi bi-minecart-loaded"></i>
+                <a href="../Log-in.html"><i class="bi bi-person"></i></a>
+                <a href="../favourite.html"><i class="bi bi-heart"></i></a>
+                <a href="../shoppingBag.html"><i class="bi bi-minecart-loaded"></i></a>
             </div>
 
             <!-- Toggler -->
